@@ -7,6 +7,10 @@ body {
   background-color: #f3f3f3;
 }
 
+body#map {
+  margin: 0;
+}
+
 a, #pb a.int {
   color: #0645ad; /* #0b0080 */
 }
@@ -271,6 +275,11 @@ a.iw-broken {
   padding: 4px 8px;
   display: inline-block;
   background-color: #f3f3f3;
+}
+
+#map_canvas { width: 100%; height: 100%; }
+#map_canvas h1 {
+  font-size: 12pt;
 }
 
 /* vim: set ts=2 sts=2 sw=2 et ai noci: */
