@@ -1,0 +1,13 @@
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+    <title>{{ map_label|escape }}</title>
+    <link rel="stylesheet" type="text/css" href="/gae-wiki-static/style.css"/>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="{{ base }}/w/pages/geotagged.js?{% if map_label %}label={{ map_label|uurlencode }}{% endif %}"></script>
+    <script type="text/javascript" src="/gae-wiki-static/scripts/map_label.js"></script>
+  </head>
+  <body id="map">
+    <div id="map_canvas"></div>
+  </body>
+</html>
